--- a/12-rock-paper-scissos.css
+++ b/12-rock-paper-scissos.css
@@ -6,3 +6,11 @@ buttton{
      font-family:Arial, Helvetica, sans-serif;
      font-weight: 700; 
    }
+.js-resetscore-button,
+.js-autoplay-button{
+  background-color: white;
+  border: none;
+  font-size: 15px;
+  padding: 8px 15px;
+  cursor: pointer;
+}   
