--- a/12-rock-paper-scissos.css
+++ b/12-rock-paper-scissos.css
@@ -1,3 +1,9 @@
+body{
+  background-color: black;
+  color: white;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 buttton{
     display:inline-flex;
      background-color: rgb(223, 223, 223);
